syntax = "proto3";

package bigtable;

option go_package = "final/proto";

service TabletInternalService {
    // Table create
    rpc CreateTable (CreateTableInternalRequest) returns (CreateTableInternalResponse);
    rpc DeleteTable (DeleteTableInternalRequest) returns (DeleteTableInternalResponse);

    // alive or not
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);


    // UpdateShard
    rpc UpdateShard(UpdateShardRequest) returns (UpdateShardResponse);


    // recover
//    rpc Recover(RecoverRequest) returns (RecoverResponse);
}

message CreateTableInternalRequest {
  string table_name = 1;
  repeated ColumnFamily column_families = 2;

  message ColumnFamily {
    string family_name = 1;
    repeated string columns = 2;
  }
}

message CreateTableInternalResponse {
  bool success = 1;
  string message = 2;
}

message DeleteTableInternalRequest {
  string table_name = 1;
}

message DeleteTableInternalResponse {
  bool success = 1;
  string message = 2;
}

message HeartbeatRequest {
  string tablet_server_id = 1;
}

message HeartbeatResponse {
  bool success = 1;
}

message UpdateShardRequest {
  string table_name = 1;
  repeated string table_rows = 2;
  map<string, Columns> table_columns = 3;   // columnFamily -> columns
  map<string, string> table_info = 4;
}

message Columns {
  repeated string column_names = 1;
}

message UpdateShardResponse {}